<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/layout_elevation_08">


        <TextView
            android:id="@+id/recipe_title"
            android:text="@string/ingredients"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/Title"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ingr_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/colorPrimary"
            android:fontFamily="cursive"
            android:gravity="start|center_vertical"
            android:paddingBottom="@dimen/layout_margin_04"
            android:paddingTop="@dimen/layout_margin_04"
            android:text="@string/ingredients"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/font_size2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipe_title" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingr_title">

            <TextView
                android:id="@+id/ingredients"
                style="@style/Ingredients0" />
        </ScrollView>

    </android.support.constraint.ConstraintLayout>
</layout>